# perpetual-research-plugin

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.sigil/: index.json
commands/: perpetual-budget.md  perpetual-catchup.md  perpetual-hypotheses.md  perpetual-propose.md  perpetual-report.md  perpetual-status.md  sig-drift.md  sig-init.md  sig-list.md
docs/: control-flow.md  refactor-plan.md
hooks/: hooks.json
skills/perpetual/: SKILL.md
skills/sigil/: SKILL.md
src/perpetual/: __init__.py  cli.py  gpu.py  graph.py  hook.py  memory.py  reports.py  runs.py
src/perpetual/policies/: bandit.py  hypothesis.py
src/perpetual/procedures/: guards.py  parser.py  runtime.py  verifier.py
src/sigil/: __init__.py  cli.py  format.py  hook.py  sidecar.py  store.py
src/sigil/languages/: __init__.py  base.py  go.py  python.py  rust.py  typescript.py
